syntax = "proto3";

// 指令：protoc --go_out=. ./proto_data/*.proto
option go_package = "./shared/res";

// 定義 InfoAfterLoginSuccess 訊息
message InfoAfterLoginSuccess {
    // 更新資源的 root 路徑
    string resource_base_url = 1;

}
