syntax = "proto3";

// 指令：protoc --go_out=. ./proto_data/*.proto
option go_package = "./internal/req";

// 定義 LoginReq 消息
message LoginReq {
  // 代理名稱
  string agentName = 1;

  // 登錄 token，client 從大廳/商戶登錄獲取
  string token = 2;

  // 客戶端版本
  string version = 3;

  // 熱更版本。僅供 cocos 連 logon 使用，其他不用傳
  string base = 4;

  // 小遊戲版本。僅供 cocos 連 logon 使用，其他不用傳
  string gameVersion = 5;

  // 賬號平台：2=2n1（默認）、4=試玩、5=h5。cocos 可不傳
  int32 platform = 6;

  // serverID。遊戲服合併端口後，cocos 用此字段識別進哪個服
  int32 server = 7;

  // 用於識別重複請求的唯一 id。僅供 cocos 識別登錄重發使用，h5 不用傳
  int32 requestId = 8;

  // 暱稱
  string nickname = 9;
}
